--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://video-sharing-mern.onrender.com/api/upload",
+  "proxy": "http://localhost:5050",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +17,7 @@
     "react-toastify": "^9.1.2",
     "react-video-js-player": "^1.1.1",
     "reactstrap": "^9.1.6",
+    "start": "^5.1.0",
     "video.js": "^8.0.4",
     "videojs-contrib-hls": "^5.15.0",
     "web-vitals": "^2.1.4"
